// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextareaPanel token markup rendering > does not render token overlay when exact tokenizer is unavailable 1`] = `
<div
  class="ui-card ui-card--default app__input-card"
>
  <div
    class="app__card-header app__card-header--stack"
  >
    <div>
      <h2>
        Input Text
      </h2>
      <p
        class="app__muted"
      >
        Paste, type, or choose a preset. We keep counts live as you edit.
      </p>
    </div>
    <div
      class="app__actions"
    >
      <div
        class="app__actions-group"
      >
        <button
          class="ui-button ui-button--primary ui-button--md"
          disabled=""
          type="button"
        >
          Paste
        </button>
        <button
          class="ui-button ui-button--subtle ui-button--md"
          type="button"
        >
          Clear
        </button>
      </div>
      <div
        class="app__actions-group"
      >
        <button
          class="ui-button ui-button--subtle ui-button--md"
          type="button"
        >
          Copy summary
        </button>
        <div
          class="ui-popover"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="ui-button ui-button--subtle ui-button--md"
            type="button"
          >
            Export
          </button>
        </div>
        <div
          class="ui-popover"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="ui-button ui-button--subtle ui-button--md"
            type="button"
          >
            Presets
          </button>
        </div>
        <button
          class="ui-button ui-button--ghost ui-button--sm"
          disabled=""
          type="button"
        >
          Undo last preset
        </button>
        <div
          class="ui-popover"
        >
          <button
            aria-controls=":r1:"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="ui-button ui-button--subtle ui-button--md"
            type="button"
          >
            Settings
          </button>
        </div>
      </div>
    </div>
  </div>
  <textarea
    aria-label="Text to analyze"
    class="app__textarea"
    placeholder="Paste or type text to estimate tokens and cost."
    rows="10"
  >
    fallback
  </textarea>
  <div
    class="app__textarea-footer"
  >
    <div
      class="app__metric"
    >
      <span
        class="app__metric-label"
      >
        Characters
      </span>
      <span
        class="app__metric-value"
      >
        8
      </span>
    </div>
    <div
      class="app__metric"
    >
      <span
        class="app__metric-label"
      >
        Estimated tokens
      </span>
      <span
        class="app__metric-value"
      >
        2
      </span>
    </div>
    <span
      class="ui-badge ui-badge--success"
    >
      Normalized paste
    </span>
  </div>
</div>
`;

exports[`TextareaPanel token markup rendering > renders token overlay and token list when exact OpenAI tokenization is enabled 1`] = `
<div
  class="ui-card ui-card--default app__input-card"
>
  <div
    class="app__card-header app__card-header--stack"
  >
    <div>
      <h2>
        Input Text
      </h2>
      <p
        class="app__muted"
      >
        Paste, type, or choose a preset. We keep counts live as you edit.
      </p>
    </div>
    <div
      class="app__actions"
    >
      <div
        class="app__actions-group"
      >
        <button
          class="ui-button ui-button--primary ui-button--md"
          disabled=""
          type="button"
        >
          Paste
        </button>
        <button
          class="ui-button ui-button--subtle ui-button--md"
          type="button"
        >
          Clear
        </button>
      </div>
      <div
        class="app__actions-group"
      >
        <button
          class="ui-button ui-button--subtle ui-button--md"
          type="button"
        >
          Copy summary
        </button>
        <div
          class="ui-popover"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="ui-button ui-button--subtle ui-button--md"
            type="button"
          >
            Export
          </button>
        </div>
        <div
          class="ui-popover"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="ui-button ui-button--subtle ui-button--md"
            type="button"
          >
            Presets
          </button>
        </div>
        <button
          class="ui-button ui-button--ghost ui-button--sm"
          disabled=""
          type="button"
        >
          Undo last preset
        </button>
        <div
          class="ui-popover"
        >
          <button
            aria-controls=":r0:"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="ui-button ui-button--subtle ui-button--md"
            type="button"
          >
            Settings
          </button>
        </div>
      </div>
    </div>
  </div>
  <textarea
    aria-label="Text to analyze"
    class="app__textarea"
    placeholder="Paste or type text to estimate tokens and cost."
    rows="10"
  >
    OpenAI token marks
  </textarea>
  <div
    class="app__textarea-footer"
  >
    <div
      class="app__metric"
    >
      <span
        class="app__metric-label"
      >
        Characters
      </span>
      <span
        class="app__metric-value"
      >
        18
      </span>
    </div>
    <div
      class="app__metric"
    >
      <span
        class="app__metric-label"
      >
        Estimated tokens
      </span>
      <span
        class="app__metric-value"
      >
        4
      </span>
    </div>
    <span
      class="ui-badge ui-badge--success"
    >
      Normalized paste
    </span>
  </div>
</div>
`;
